[package]

name = "drawer"
version = "0.0.1"
authors = ["Sindre Johansen <sindreij@gmail.com>"]

[dependencies.glium]
git = "https://github.com/tomaka/glium"

[dependencies.glium_macros]
git = "https://github.com/tomaka/glium"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"
